--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,10 @@ html
 
   head
     title= title
+    link(rel="stylesheet", href="css/index.css")
 
-  body(style="background: blue")
+  body
     h1= message
     a(href="/") vissza
+
+    script(src="js/index.js")
