--- a/views/root.pug
+++ b/views/root.pug
@@ -1,9 +1,12 @@
 html
   head
     title= title
+    link(rel="stylesheet", href="css/index.css")
   body
     h1= message
     br
     a(href="/plus") Plusz
     br
     a(href="/minus") Minusz
+
+    script(src="js/index.js")
