--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,4 @@
-html
+extend layout
 
-  head
-    title= title
-    link(rel="stylesheet", href="css/index.css")
-
-  body
-    h1= message
-    a(href="/") vissza
-
-    script(src="js/index.js")
+block content
+    h1 Content
