--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,4 @@
 extend layout
 
 block content
-    h1.animate__animated.animate__backInUp.h3.bg-danger Ez egy animált elem
-    br
-    h1.animate__animated.animate__backInDown.h3.bg-success Ez még egy animált elem
-    br
-    h3.animate__animated.animate__bounceInUp.animate__delay-1s Meg még egy csak késéssel
-
+    a(href="/login") Login
