--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,19 +24,23 @@ html(lang='hu')
         meta(property='og:title', content= title)
         meta(property='og:description', content='Celebrate Together: Ünnepeljétek együtt a szülinapjaitokat! Határok nélküli ünneplés!')
         title= title
-        link(rel='icon', href='/images/icon.png')
+        link(rel='icon', href='/images/icon.png?v=1')
         link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css', rel='stylesheet', type='text/css')
         link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css', rel='stylesheet', type='text/css')
-        link(href='/css/index.css', rel='stylesheet', type='text/css')
+        link(href='/css/index.css?v=1', rel='stylesheet', type='text/css')
         block styles
     body
+        if messages
+            for message in messages
+                .alert.alert-warning= message
+
         block content
         
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js')
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js')
         script(defer='', src='https://use.fontawesome.com/releases/v5.0.8/js/all.js')
-        script#cookieinfo(type='text/javascript', src='//cookieinfoscript.com/js/cookieinfo.min.js')
-        script(src="js/index.js", type="text/javascript")
+        script#cookieinfo(type='text/javascript', src='/lib/cookies.js?v=1')
+        script(src="js/index.js?v=1", type="text/javascript")
         block scripts
