Regisztráció és bejelentkezés ✅

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,6 @@
 extend layout
 
 block content
-    a(href="/login") Login
+    a(href="/login").mt-5.ml-5 Login
+    br
+    a(href="/register").mt-5.ml-5 Register
