--- a/views/login.pug
+++ b/views/login.pug
@@ -1,16 +1,9 @@
-//
-//
-//
-// Bejelentkezési oldal
-//
-//
-//
 extend layout
 
 block content
     h1 Login oldal
 
     form(action="/login", method="POST")
-        input(type="email", name="email", placeholder="Email", required="ture") 
-        input(type="password", name="password", placeholder="Jelszó", required="ture") 
-        input(type="submit", name="submit")
+        input(type="email", name="email", placeholder="Email", required="ture").form-control
+        input(type="password", name="password", placeholder="Jelszó", required="ture").form-control
+        input(type="submit", name="submit").btn.btn-primary
