--- a/views/login.pug
+++ b/views/login.pug
@@ -4,6 +4,6 @@ block content
     h1 Login oldal
 
     form(action="/login", method="POST")
-        input(type="email", name="email", placeholder="Email", required="ture").form-control
-        input(type="password", name="password", placeholder="Jelszó", required="ture").form-control
+        input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control
+        input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
         input(type="submit", name="submit").btn.btn-primary
