--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,3 +58,14 @@ a:after,
     }
 
 }
+.lablec{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+}
+img {
+    width: 10%;
+  }
