--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ html(lang='hu')
         meta(property='og:title', content= title)
         meta(property='og:description', content='Celebrate Together: Ünnepeljétek együtt a szülinapjaitokat! Határok nélküli ünneplés!')
         title= title
-        link(rel='icon', href='/images/icon.png?v=1')
+        link(rel='icon', href='/images/icon.ico?v=1')
         link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css', rel='stylesheet', type='text/css')
         link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css', rel='stylesheet', type='text/css')
