--- a/views/login.pug
+++ b/views/login.pug
@@ -1,9 +1,19 @@
 extend layout
 
 block content
-    h1 Login oldal
 
-    form(action="/login", method="POST")
-        input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control
-        input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
-        input(type="submit", name="submit").btn.btn-primary
+    h1 Bejelentkezés
+    div(class="container")
+
+        img(src="/images/logo.png" class="rounded" alt="lógó")
+    
+        form(action="/login", method="POST", class="col-4")
+            label(for="email") Email cím:
+            input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control
+            label(for="password") Jelszó:
+            input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
+            br
+            input(type="submit", name="submit").btn.btn-primary
+
+        div(class ="lablec") 
+            a(href="/contact") névjegy
