--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,6 +12,7 @@ body {
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    background-image: url('/images/martin.jpg');
 
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
