--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,10 +38,15 @@ html(lang='hu')
 
         block content
         
+        footer 
+            div(class ="lablec")
+                a(href="/contact") Névjegy
+                p.text-muted Copyright &copy; 2022 Celebrate Together
+
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js')
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js')
         script(defer='', src='https://use.fontawesome.com/releases/v5.0.8/js/all.js')
         script#cookieinfo(type='text/javascript', src='/lib/cookies.js?v=1')
-        script(src="js/index.js?v=1", type="text/javascript")
+        script(src="/js/index.js?v=1", type="text/javascript")
         block scripts
