--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
     main.ps-5.pe-5.pt-2
         if user
             h2 Üdvözöllek 
-                span= user.email
+                span= user.name
                 span !
             br
 
