--- a/views/search.pug
+++ b/views/search.pug
@@ -24,8 +24,4 @@ block content
         for res in results
             p
                span= res.id
-               span= res.e_nev
-               span= res.nev
-               span= res.email
-               span= res.szoveg 
-               span= res.hely
+               span= res.name
