--- a/views/user.pug
+++ b/views/user.pug
@@ -2,7 +2,11 @@ extends layout
 
 block content 
     h1 User
-    p= user.id
-    p= user.name
-    p= user.email
-    p= user.password
+    br
+    p= view_user.id
+    br
+    p= view_user.name
+    br
+    p= view_user.email
+    br
+    p= view_user.password
