--- a/views/login.pug
+++ b/views/login.pug
@@ -16,4 +16,4 @@ block content
             label(for="password") Jelszó:
             input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
             br
-            input(type="submit", name="submit").btn.btn-primary
+            input(type="submit", name="submit", class="kecske").btn.btn-primary
