--- a/views/index.pug
+++ b/views/index.pug
@@ -23,6 +23,8 @@ block content
             br
             a(href="/user/settings").mt-5.ml-5 Fehlasználó beállítások
             br
-            a(href="/logout").mt-5.ml-5 Kijelentkezés
-            br
             a(href="/search").mt-5.ml-5 Keresés
+            br
+            a(href="/user/friends").mt-5.ml-5 Barátok
+            br
+            a(href="/logout").mt-5.ml-5 Kijelentkezés
