--- a/public/css/index.css
+++ b/public/css/index.css
@@ -83,6 +83,7 @@ img {
 
 .kecske{
     background: linear-gradient(to right, red, orange, yellow, green, blue, purple);
+    color: black;
 }
 
 @media screen and (max-width: 1300px) {
