--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,13 +1,11 @@
 
-html,
-body {
+main {
     margin: 10px;
 }
 
 @media screen and (max-width: 1300px) {
  
-    html,
-    body {
+    main {
         margin: 5px !important;
     }
 
