--- a/views/login.pug
+++ b/views/login.pug
@@ -16,5 +16,5 @@ block content
             label(for="password") Jelszó:
             input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
             br
-            input(type="submit", name="submit" value="bejelentkezés").btn.btn-primary.btn-lg.kecske
+            input(type="submit", name="submit" value="bejelentkezés").text-uppercase.btn.btn-primary.btn-lg
             
