--- a/public/css/index.css
+++ b/public/css/index.css
@@ -69,6 +69,13 @@ a.nav-link:hover {
     color: var(--active-color) !important;
 }
 
+i.fas,
+i.fab,
+i.far {
+    margin: 0 !important;
+    white-space: nowrap !important;
+}
+
 .logo-text {
     font-size: 25px;
     font-weight: bold;
