--- a/views/index.pug
+++ b/views/index.pug
@@ -1,23 +1,20 @@
 extend layout
 
 block content
-    main.ps-5.pe-5.pt-2
+    .ps-5.pe-5.pt-2
         if user
             h2 Üdvözöllek 
                 span= user.name
                 span !
             br
 
-        hr
-        h2 Jelenlegi oldalak:
-
-        if !user
+        //if !user
             br
             a(href="/login").mt-5.ml-5 Bejelentkezés
             br
             a(href="/register").mt-5.ml-5 Regisztráció
         
-        if user
+        //if user
             br
             a(href=makeUserUrl(user)).mt-5.ml-5 Saját profilom
             br
