--- a/views/user.pug
+++ b/views/user.pug
@@ -2,18 +2,13 @@ extends layout
 
 block content 
     h1 User
-    
-    if is_friend === 'nr'
-        br
-        a(href="/user/"+view_user.id+"/friend").btn.btn-success + Barátnak jelölés
-    if is_friend === 'na'
-        br
-        a(href="/user/"+view_user.id+"/unfriend").btn.btn-danger - Barátnak jelölés törlése
-    if is_friend === 'a'
-        br
-        a(href="/user/"+view_user.id+"/unfriend").btn.btn-outline-danger - Barát törlése
-    
     p= is_friend
+
+    if user.id != view_user.id
+        if is_friend.is_approved == 1
+            a(href="/user/"+view_user.id+"/unfriend").btn.btn-outline-danger - Barát törlés
+        else 
+            a(href="/user/"+view_user.id+"/friend").btn.btn-success + Barátnak jelölés
 
     br
     p= view_user.id
