--- a/views/layout.pug
+++ b/views/layout.pug
@@ -86,6 +86,9 @@ html(lang='hu')
                                         i.fas.fa-cogs.me-1
                                         | Beállítások
                                 li
+                                    a.dropdown-item(href='/event/create')
+                                        | Esemény meghirdetése
+                                li
                                     hr.dropdown-divider
                                 li
                                     a.dropdown-item(href='/logout')
