--- a/views/user.pug
+++ b/views/user.pug
@@ -1,14 +1,15 @@
 extends layout 
 
 block content 
-    h1 User
-    p= is_friend
+    h1= view_user.name
 
     if user.id != view_user.id
-        if is_friend.is_approved == 1
-            a(href="/user/"+view_user.id+"/unfriend").btn.btn-outline-danger - Barát törlés
+        if is_friend
+            form(action="/user/"+view_user.id+"/unfriend" method="POST")
+                input(type="submit" name="submit" value="- Barát törlés").btn.btn-outline-danger
         else 
-            a(href="/user/"+view_user.id+"/friend").btn.btn-success + Barátnak jelölés
+            form(action="/user/"+view_user.id+"/friend" method="POST")
+                input(type="submit" name="submit" value="+ Barátnak jelölés").btn.btn-outline-success
 
     br
     p= view_user.id
