--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -6,6 +6,14 @@ block content
     div(class="container-fluid")
         .row
             form(action="/event/create", method="POST", class="col-4")
+                label(for="name") Az esemény neve:
+                input(type="text", name="name", placeholder="Az esemény neve", required="ture", value="").form-control
+
+                label(for="text") Az esemény leírása:
+                input(type="text", name="text", placeholder="Az esemény leírása", required="ture", value="").form-control
+
+                label(for="place") Az esemény helyszine:
+                input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value="").form-control
 
                 br
                 input(type="submit", name="submit" value="Meghirdetés").btn.btn-success
