--- a/views/settings.pug
+++ b/views/settings.pug
@@ -1,5 +1,8 @@
 extends layout 
 
+block scripts 
+    script(src="/js/settings.js?v=1", type="text/javascript")
+
 block content 
     h1.ms-3.mt-3.fw-bold Beállítások
 
@@ -25,9 +28,9 @@ block content
                 br
                 input(type="submit", name="submit" value="Módosítások mentése").btn.btn-success
 
-            form(action="/user/delete", method="POST", class="col-4")
+            form#delete-form(action="/user/deletee", method="GET", class="col-4")
                 br
-                input(type="submit", name="submit" value="Fiókom törlése").btn.btn-outline-danger
+                input(id="delete-btn" type="submit", name="submit" value="Fiókom törlése").btn.btn-outline-danger
 
 
     div(style="margin-bottom:500px;")
