--- a/views/login.pug
+++ b/views/login.pug
@@ -4,17 +4,25 @@ block styles
     link(href='/css/form.css?v=1', rel='stylesheet', type='text/css')
 
 block content
-    h1.fw-bold.ms-3.mt-3 Bejelentkezés
-
-    div(class="container-fluid")
-        img(src="/images/logo.png" class="rounded" alt="lógó")
-    
-        .row
-            form(action="/login", method="POST", class="col-4")
-                label(for="email") Email cím:
-                input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control
-                label(for="password") Jelszó:
-                input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
-                br
-                input(type="submit", name="submit" value="Bejelentkezés").btn.btn-primary
+    section.h-100.gradient-form.gradient-custom-1
+        .container.py-5.h-100
+            .row.d-flex.justify-content-center.align-items-center.h-100
+                .col-xl-10
+                    .card.rounded-3.text-black
+                        .row.g-0
+                            .col-lg-6
+                                .card-body.p-md-5.mx-md-4
+                                    .text-center
+                                        img(src='images/logo.png', style='width: 185px;', alt='logo')
+                                        h4.mt-1.mb-5.pb-1 Ünnepeljünk együtt!
+                                    form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
+                                        label.form-label(for='form2Example11') E-mail cím
+                                        input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control
+                                        label.form-label(for='form2Example22') Jelszó
+                                        input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
+                                        br
+                                        input(type="submit", name="submit" value="Bejelentkezés").btn.btn-primary.gradient-custom-2
+                                        // <a class="text-muted" href="#!">Forgot password?</a>
+                            .col-lg-6.d-flex.align-items-center
+                                img.loginpic(src='images/kep.png')
             
